@@ -2,6 +2,8 @@ The current version of Ruby Reports is 0.4.15
 
 changes since 0.4.13
 
+- Added an options accessor to help solve ticket #8
+
 - Alioth now has a powerful hook back into the engine from plugins via helpers
 
 - added action / attribute syntactic sugar for Alioth
